drumkit exercise trying add/remove instead of toggle

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -67,9 +67,9 @@
 
     audio.currentTime = 0;
     audio.play();
-    keyDiv.classList.toggle('playing');
+    keyDiv.classList.add('playing');
     audio.onended = function() {
-      keyDiv.classList.toggle('playing');
+      keyDiv.classList.remove('playing');
     }
 
   });
