--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -39,16 +39,26 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+    const oldInventors = inventors.filter((inventor) => inventor.year >= 1500 && inventor.year < 1600);
+
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+
+    const fullNames = inventors.map(inventor => inventor.first + inventor.last);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    inventors.sort((a, b) => a.year - b.year ? 1 : -1);
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+    const totalYearsLived = inventors.reduce((a,b) => a + b.passed - b.year, 0);
+
     // 5. Sort the inventors by years lived
+
+    inventors.sort((a, b) => (a.passed - a.year) > (b.passed - b.year) ? 1 : -1);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -57,10 +67,23 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const alphbeticalPeople = people.sort((a, b) => {
+      const [aLastName, aFirstName] = a.split(", ");
+      const [bLastName, bFirstName] = b.split(", ");
+      return aLastName > bLastName ? 1: -1;
+    });
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
+    // jayson note: returns array {[transport type], [numberofType]}
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const typesAndSums = data.reduce((result, current) => {
+      if(!result[item]) 
+        result[item] = 0;
+      result[item]++;
+      return result;
+    }, {});
   </script>
 </body>
 </html>
