--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,32 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isNineteen = people.some((person) => {
+      return ((2023 - person.age) >= 19);
+    });
+
     // Array.prototype.every() // is everyone 19 or older?
+    const areAllNineteen = people.every((person) => {
+      return ((2023 - person.age) >= 19);
+    });
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const comment = comments.find((comment) => {
+      return (comment.id === 823423);
+    });
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const returnedIndex = comments.findIndex((comment) => {
+      return (comment.id === 823423);
+    })
+
+    comments.splice(index, 1);
 
   </script>
 </body>
